--- a/manifest.json
+++ b/manifest.json
@@ -4,11 +4,13 @@
     "version"          : "0.0.0",
     "description"      : "Set up master and slave tabs",
     "icons"            : {
+        "19"  : "images/icon-128x128.png",
         "128" : "images/icon-128x128.png"
     },
     "permissions" : [
         "http://*/",
         "https://*/",
+        "storage",
         "tabs"
     ],
     "background":{
