--- a/manifest.json
+++ b/manifest.json
@@ -8,17 +8,20 @@
         "128" : "images/icon-128x128.png"
     },
     "permissions" : [
-        "http://*/",
-        "https://*/",
+        "<all_urls>",
         "storage",
         "tabs"
     ],
     "background":{
         "persistent" : false,
-        "page"       : "background.html"
+        "scripts"    : ["js/background.js"]
     },
     "browser_action" : {
         "default_icon"  : "images/icon-128x128.png",
-        "default_title" : "Window Sync"
-    }
+        "default_title" : "Sync windows"
+    },
+    "content_scripts" : [{
+        "matches" : ["<all_urls>"],
+        "js"      : ["js/content.js"]
+    }]
 }
