--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,11 @@
     ],
     "background":{
         "persistent" : false,
-        "scripts"    : ["js/background.js"]
+        "scripts"    : [
+            "js/config.js",
+            "js/extension.js",
+            "js/bootstrap.js"
+        ]
     },
     "browser_action" : {
         "default_icon"  : "images/icon-128x128.png",
